# soulboundNFT_for_reservation

./: .gitignore  Anchor.toml  COLLECTION_UPDATE_SUMMARY.md  README.md  TEST_README.md  TEST_SCRIPT_UPDATES.md  TEST_UPDATES_COMPLETE.md  package.json  presale_purchasers.csv  presale_purchasers.json
keys/: admin_airdrop_CbQ2JkSu.json  collection_og_6qYWrFJD.json  collection_og_6sDxc2ZD.json  collection_og_93USj1DE.json  collection_og_Dj9sTvLc.json  collection_og_EgXpcYm1.json  collection_og_H6M1Hg4F.json  collection_og_HcqboWAp.json  collection_og_gQ9X1bfZ.json  nft_5KnXkYxC.json  nft_5k2nWDft.json  nft_5us3opRv.json  nft_5yCGxQX4.json  nft_7EN5rjBe.json  nft_7sjuu92i.json  nft_9igzkine.json  nft_A5F3inzL.json  nft_Amar763C.json  nft_AuY5JVGF.json  nft_H27Fnach.json  nft_SnMQ1fiu.json  nft_UoYxTVAt.json
programs/soulbound_nft_for_reservation/: Cargo.toml
programs/soulbound_nft_for_reservation/src/: error.rs  lib.rs  utils.rs
programs/soulbound_nft_for_reservation/src/instructions/: admin_mint_nft.rs  batch_mint_dongle_nft.rs  burn_and_mint.rs  burn_nft.rs  create_collection_nft.rs  init_admin.rs  mint_nft.rs  mod.rs  purchase_dongle.rs  set_admin_wallet.rs  set_vice_admins.rs  test_token.rs  update_admin.rs  update_nft_metadata.rs  update_payment_mint.rs  update_withdraw_wallet.rs  withdraw.rs
programs/soulbound_nft_for_reservation/src/state/: admin_state.rs  collection_state.rs  mod.rs  user_state.rs
scripts/: admin_mint_nft.ts  create_collection.ts  init_admin.ts  mint_nft.ts  parse_signature.ts  query_presale_purchasers.ts  run-tests.sh  test_admin_mint.ts  (+5 more)
(+39 files in other folders)
