[package]
name = "soulbound_nft_for_reservation"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soulbound_nft_for_reservation"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version =  "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
mpl-core = { version = "0.10.0", features = ["anchor"] }
borsh = "0.10.3"
num-traits = "0.2.18"
num-derive = "0.4.2"
solana-program = "1.17.22"
spl-token-2022 = { version = "0.7.0", features = ["no-entrypoint"] }
mpl-utils = "0.3.6"
arrayref = "0.3.9"
spl-associated-token-account = { version = "2.3.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.2.0"}
